@@ -15,9 +15,9 @@ import edu.umd.cs.piccolo.util.PDimension;
  */
 public class BuildAFunctionScene extends PNode {
     public BuildAFunctionScene() {
-        addChild( new BinaryNumberFunctionNode( "+" ) );
-        addChild( new BinaryNumberFunctionNode( "-" ) );
-        addChild( new CopyNumberFunctionNode( "copy" ) );
+        addChild( new BinaryFunctionNode( "+", Type.NUMBER ) );
+        addChild( new BinaryFunctionNode( "-", Type.NUMBER ) );
+        addChild( new CopyFunctionNode( "copy", Type.NUMBER ) );
 
         addChild( new UnaryFunctionNode( "\u27152", true, Functions.INTEGER_TIMES_2, Type.NUMBER, Type.NUMBER ) );
         addChild( new UnaryFunctionNode( "+1", true, Functions.INTEGER_PLUS_1, Type.NUMBER, Type.NUMBER ) );
