@@ -3,32 +3,35 @@ package edu.colorado.phet.functions.buildafunction;
 import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.geom.Area;
-import java.awt.geom.Ellipse2D;
 import java.awt.geom.RoundRectangle2D;
 
+import edu.colorado.phet.common.phetcommon.math.vector.Vector2D;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
+import edu.colorado.phet.functions.model.Type;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
 import edu.umd.cs.piccolo.util.PDimension;
 
-import static edu.colorado.phet.functions.buildafunction.Constants.functionColor;
+import static edu.colorado.phet.functions.buildafunction.Constants.*;
 
 /**
  * @author Sam Reid
  */
-public class BinaryNumberFunctionNode extends PNode {
-    public BinaryNumberFunctionNode( String text ) {
+public class CopyFunctionNode extends PNode {
+    public CopyFunctionNode( String text, Type type ) {
         //use CAG for prototype, may need to speed up later on
-        final RoundRectangle2D.Double bodyRect = new RoundRectangle2D.Double( 0, 0, Constants.bodyDimension.width, Constants.bodyDimension.height * 2 + Constants.inset, 20, 20 );
+        final RoundRectangle2D.Double bodyRect = new RoundRectangle2D.Double( 0, 0, bodyDimension.width, bodyDimension.height * 2 + inset, 20, 20 );
         Area a = new Area( bodyRect );
-        a.subtract( new Area( new Ellipse2D.Double( bodyRect.getX() - Constants.ellipseWidth / 2, Constants.bodyDimension.height / 2 - Constants.ellipseWidth / 2, Constants.ellipseWidth, Constants.ellipseWidth ) ) );
-        a.subtract( new Area( new Ellipse2D.Double( bodyRect.getX() - Constants.ellipseWidth / 2, Constants.bodyDimension.height * 3.0 / 2 + Constants.inset - Constants.ellipseWidth / 2, Constants.ellipseWidth, Constants.ellipseWidth ) ) );
-        a.add( new Area( new Ellipse2D.Double( bodyRect.getMaxX() - Constants.ellipseWidth / 2, bodyRect.getCenterY() - Constants.ellipseWidth / 2, Constants.ellipseWidth, Constants.ellipseWidth ) ) );
+        final double maxX = a.getBounds2D().getMaxX();
+        a.add( InputOutputShapes.getRightSide( type, Vector2D.v( maxX, a.getBounds2D().getCenterY() + Constants.bodyDimension.height * 0.5 ) ) );
+        a.add( InputOutputShapes.getRightSide( type, Vector2D.v( maxX, a.getBounds2D().getCenterY() - Constants.bodyDimension.height * 0.5 ) ) );
+        a.subtract( InputOutputShapes.getRightSide( type, Vector2D.v( a.getBounds2D().getX(), a.getBounds2D().getCenterY() ) ) );
+
         addChild( new PhetPPath( a, functionColor.get(), new BasicStroke( 1 ), Color.black ) {{
             functionColor.addObserver( new VoidFunction1<Color>() {
                 public void apply( final Color color ) {
@@ -36,17 +39,17 @@ public class BinaryNumberFunctionNode extends PNode {
                 }
             } );
         }} );
-        addChild( new PhetPText( text, new PhetFont( 42, true ) ) {{
+        addChild( new PhetPText( text, new PhetFont( 24, true ) ) {{
             setOffset( bodyRect.getCenterX() - getFullBounds().getWidth() / 2 + 10, bodyRect.getCenterY() - getFullBounds().getHeight() / 2 );
         }} );
 
         addInputEventListener( new PBasicInputEventHandler() {
             @Override public void mousePressed( final PInputEvent event ) {
-                BinaryNumberFunctionNode.this.moveToFront();
+                CopyFunctionNode.this.moveToFront();
             }
 
             @Override public void mouseDragged( final PInputEvent event ) {
-                PDimension delta = event.getDeltaRelativeTo( BinaryNumberFunctionNode.this.getParent() );
+                PDimension delta = event.getDeltaRelativeTo( CopyFunctionNode.this.getParent() );
                 translate( delta.width, delta.height );
             }
         } );
